bk_ida/gccida/g0/std_expand_builtin_va_arg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_arg/src/builtins.c:3457:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_arg/src/builtins.c:3459:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_arg/src/builtins.c:3461:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_arg/src/builtins.c:3462:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_arg/src/builtins.c:3470:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rounded_size; // [rsp+48h] [rbp-8h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_arg/src/builtins.c:3486:29: error: expected expression
rounded_size = ( tree_node *)*( &global_trees + 15); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_arg/src/builtins.c:3486:18: error: use of undeclared identifier 'tree_node'
rounded_size = ( tree_node *)*( &global_trees + 15); 
                 ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/std_expand_builtin_va_arg/src/obj/builtins.o] Error 1
